# mcp-server-weather-wsl

./: .gitignore  .windsurfrules  Makefile  README.md  mcp_server.py  pyproject.toml  shell.py  weather.py
hooks/: pre-commit
src/weather/: server.py
src/weather/resources/: __init__.py  system_resources.py
src/weather/services/: system_service.py  weather_service.py
src/weather/tools/: __init__.py  system_tools.py  weather_tools.py
src/weather/utils/: formatting.py  http.py
tests/: conftest.py  test_server.py
tests/services/: test_weather_service.py
tests/tools/: test_weather_tools.py
tests/utils/: test_formatting.py  test_http.py
